Disable inefficient query warning (tracked in bug 482351) rs=dietrich